[package]
name = "evm"
version = "0.1.0"
edition = "2021"

[dependencies]
revm = { git = "https://github.com/powdr-labs/revm", branch = "serde-no-std", default-features = false, features = [ "serde" ] }
powdr_riscv_rt = { git = "https://github.com/powdr-labs/powdr", branch = "main" }
models = { git = "https://github.com/powdr-labs/powdr_revm", branch = "continuations", package = "models" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ahash = { version = "=0.8.6", default-features = false }

[workspace]
